# Capstone

./: .gitignore  README.md  mapa_AM_large.html  mapa_PM_small.html  pyproject.toml
DATOS P5 - Ruteo de profesionales de la salud/: AM_large.xlsx  PM_small.xlsx  datos.md  real_times_sample.csv
informe/: Thesis.bib  Thesis.tex
informe/chapters/: anexos.tex  conclusiones.tex  declaracion_ia.tex  descripcion_problema.tex  implementacion.tex  introduccion.tex  metodologia.tex  pasos_futuros.tex  resultados.tex  resumen_ejec.tex
papers/: Búsqueda de paper ALNS TD-HDARP.md  Primo_BibTeX_Export.bib
presentacion/: presentacion_grupo10.tex
scripts/: run_alns_td.py  run_full_caso_base.py  run_milp_caso_base.py  run_miope_caso_base.py
src/alns/: adaptive.py  construct.py  destroy.py  engine.py  evaluation.py  repair.py  solution.py
src/baselines/: miope.py
src/data/: __init__.py  case_base.py  instance.py  loader.py
src/milp/: td_hdarp.py
src/predictive/: features.py  predict.py  train.py
tests/: test_alns_evaluation.py  test_data_loader.py  test_milp_small.py  test_miope.py  test_smoke.py
